<resources>
    <string name="app_name">语音服务</string>
    <string name="boot_check">自检系统  [版本号为：%s]</string>
    <string name="check_cards_num_title">声卡号检测</string>
    <string name="check_cards_num_result">当前声卡号为 [ %d ]</string>
    <string name="check_cards_permission_title">声卡权限检测</string>
    <string name="check_cards_permission_result">声卡%d的权限为[ %s ]</string>
    <string name="check_time_title">系统时间检测</string>
    <string name="check_time_result">当前时间为[ %s ]</string>
    <string name="check_net_title">网络检测</string>
    <string name="check_net_result">当前网络状态</string>
    <string name="check_cards_num_no_exist">未找到USB声卡</string>
    <string name="check_cards_permission_result_none">无</string>
    <string name="check_net_result_success">网络可用</string>
    <string name="check_net_result_error">网络不可用</string>
    <string name="check_success">检测完毕,全部成功,系统即将启动</string>
    <string name="check_error">检测完毕,出现失败检测项,请修改后重新启动</string>
    <string name="check_platform_mic">系统平台和MIC类型检测</string>
    <string name="platform_mic">当前系统平台为[ %s ],Mic类型为[ %s ]</string>
    <string name="check_cae_auth">CAE鉴权</string>
    <string name="cea_auth_success">"   鉴权成功"</string>
    <string name="cea_auth_error">"   鉴权失败"</string>
    <string name="check_open_card">声卡打开测试</string>
    <string name="connect_aiui_server">服务启动成功,请对我说“小飞小飞”唤醒我</string>
    <string name="disConnect_aiui_server">语音服务已经断开</string>
    <string name="wake_success">唤醒成功[angle=%d,beam=%d,count=%d]</string>
    <string name="sleep_wake">进入休眠模式,请对我说“小飞小飞”唤醒我</string>
    <string name="please_input_time">请输入时间(单位ms)</string>
    <string name="turnLeft">正转</string>
    <string name="turnRight">反转</string>
    <string name="system_no_root_permission">没有root权限,无法获取</string>
    <string name="open_card">手动打开声卡</string>
    <string name="card_num">请输入声卡号(cat /proc/asound/cards 查看)</string>
    <string name="system_no_root_check_error">没有root权限,请修改声卡读写权限，然后输入声卡号,手动打开录音</string>
    <string name="input_card">请输入声卡号</string>
    <string name="open_card_error">打开声卡号失败，请确认声卡号</string>
    <string name="open_card_success">打开声卡成功</string>
    <string name="save_log">是否保存录音文件:</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="start_wake">手动激活语音交互</string>
    <string name="stop_wake">退出语音交互</string>
    <string name="start_tts">开始合成TTS</string>
    <string name="tts_hint">请输入要合成的tts文本</string>
    <string name="please_intut_tts">请输入要合成的tts文本</string>
    <string name="wake_success_tip">有什么可以帮您</string>
    <string name="app_exit">退出应用</string>
    <string name="center">回中</string>
    <string name="app_id">0e90cf9a</string>
    <string name="pcm_log">是否打开扫频测试</string>
</resources>