<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <!--头部状态栏-->

    <Button
        android:id="@+id/btnBack"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="8dp"
        android:background="@mipmap/arrow"
        android:onClick="back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/headVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/boot_check"
        android:textSize="@dimen/text_size_center"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintLeft_toRightOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="@id/btnBack"
        android:visibility="gone"/>

    <View
        android:id="@+id/viewDivide"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/headVersion" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/bottomLayout"
        app:layout_constraintTop_toBottomOf="@id/viewDivide" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:id="@+id/initProgress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:min="0"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent" />

        <EditText
            android:id="@+id/edit_card_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/card_num"
            android:inputType="number"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/openCard"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/openCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openCard"
            android:text="@string/open_card"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>